# opentelemetry-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/services/opentelemetry-tail-axum/: Cargo.toml
crates/services/opentelemetry-tail-axum/src/: main.rs
crates/services/opentelemetry-tail-yew/: Cargo.toml  index.html  index.scss
crates/services/opentelemetry-tail-yew/src/: content.rs  header.rs  lib.rs  main.rs  websocket.rs
crates/services/opentelemetry-tail-yew/src/pages/: logs.rs  metrics.rs  mod.rs  page_not_found.rs  traces.rs
