[package]
name = "opentelemetry-tail-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1.38", features = ["full"] }

[lints]
workspace = true
