[package]
name = "opentelemetry-tail-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "protobuf"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
opentelemetry-proto = { version = "0.5", features = ["full", "logs"] }
prost = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
